--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         //- SCSS
         link(rel="stylesheet", href="./main.scss")
-        title Fetch Github Repos
+        title Title
 
 
 
@@ -14,11 +14,6 @@ html(lang="en")
     body
         .container
 
-            .repos-cont
-                .get-repos
-                    input(placeholder="Username")
-                    button Get Repos
-                .show-repos: div
 
 
 
